--- a/_includes/title.html
+++ b/_includes/title.html
@@ -6,7 +6,7 @@
 
   <h3 style="color: #44434d"><b>ICCV 2025 Tutorial</b></h3>
   <h3 style="color: #44434d">
-    <b>Date:</b> TBD (full day tutorial)
+    <b>Date:</b> October 19th, 2025 (full day tutorial)
   </h3>
   <h3 style="color: #44434d"><b>Location:</b> TBD</h3>
 
