--- a/_sass/whiteglass.scss
+++ b/_sass/whiteglass.scss
@@ -43,5 +43,6 @@ $on-laptop:        800px !default;
 @import
   "whiteglass/base",
   "whiteglass/layout",
-  "whiteglass/syntax-highlighting"
+  "whiteglass/syntax-highlighting",
+  "funding_acknowledgements"
 ;
