--- a/_includes/title.html
+++ b/_includes/title.html
@@ -8,7 +8,7 @@
   <h3 style="color: #44434d">
     <b>Date:</b> October 19th, 2025 (full day tutorial)
   </h3>
-  <h3 style="color: #44434d"><b>Location:</b> TBD</h3>
+  <h3 style="color: #44434d"><b>Location:</b> <a href="https://map.concept3d.com/?id=1107#!ce/24709?ct/25427,24748,24747,24709,24708,22261,0?m/231569?s/?sbc/">Hawai'i Convention Center 324</a></h3>
 
   <div class="svg-container">
     <!-- Embedding SVG image with <img> tag -->
